--- a/Python/jupyternb/We_love_kriii.ipynb
+++ b/Python/jupyternb/We_love_kriii.ipynb
@@ -42,9 +42,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![print_code](/Users/f1r3_r41n/Desktop/Algorithm/Python/Photo/wlk_print_code.png)\n",
+    "![print_code](https://raw.githubusercontent.com/neicebee/Algorithm/main/Python/Photo/wlk_print_code.png)\n",
     "\n",
-    "![print_result](/Users/f1r3_r41n/Desktop/Algorithm/Python/Photo/wlk_print_result.png)\n",
+    "![print_result](https://raw.githubusercontent.com/neicebee/Algorithm/main/Python/Photo/wlk_print_result.png)\n",
     "\n",
     "`time.process_time_ns()`를 사용하여 보는 코드의 시간은 14000ns에서 21000ns 사이"
    ]
@@ -72,9 +72,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![for_code](/Users/f1r3_r41n/Desktop/Algorithm/Python/Photo/wlk_for_code.png)\n",
+    "![for_code](https://raw.githubusercontent.com/neicebee/Algorithm/main/Python/Photo/wlk_for_code.png)\n",
     "\n",
-    "![for_result](/Users/f1r3_r41n/Desktop/Algorithm/Python/Photo/wlk_for_result.png)\n",
+    "![for_result](https://raw.githubusercontent.com/neicebee/Algorithm/main/Python/Photo/wlk_for_result.png)\n",
     "\n",
     "for문을 사용한 코드는 16000ns에서 25000ns 사이로 나온다.\n",
     "\n",
